--- a/hackathon/add.html
+++ b/hackathon/add.html
@@ -9,36 +9,36 @@
     </head>
     <body>
         <h1>Sign Up</h1>
-        <form action="" onsubmit="new_usr()">
+        <form action="index.php" method="POST">
             <table>
                 <tbody>
                     <tr>
-                        <td><label>First Name:</label></td>
+                        <td><label id="0">First Name:</label></td>
                         <td><input type="text" id="fname" name="fname"></td>
                     </tr>
                     <tr>
-                        <td><label>Last Name:</label></td>
+                        <td><label id="1">Last Name:</label></td>
                         <td><input type="text" id="lname" name="lname"></td>
                     </tr>
                     <tr>
-                        <td><label>Email:</label></td>
+                        <td><label id="2">Email:</label></td>
                         <td><input type="email" id="email" name="email"></td>
                     </tr>
                     <tr>
-                        <td><label>Discord Tag:</label></td>
+                        <td><label id="3">Discord Tag:</label></td>
                         <td><input type="text" id="discord" name="discord"></td>
                     </tr>
                     <tr>
-                        <td><label>Password:</label></td>
+                        <td><label id="4">Password:</label></td>
                         <td><input type="password" id="password" name="password"></td>
                     </tr>
                     <tr>
-                        <td><label>Confirm Password:</label></td>
+                        <td><label id="5">Confirm Password:</label></td>
                         <td><input type="password" id="conf_password" name="conf_password"></td>
                     </tr>
                 </tbody>
             </table>
-            <input type="submit" id="submit" value="Sign Up">
         </form>
+        <button onclick="new_usr()">Sign Up</button>
     </body>
 </html>
