--- a/hackathon/home.html
+++ b/hackathon/home.html
@@ -19,8 +19,8 @@
 </div>
 <div class="welcome-text">
         <h1>
-Read Player <span>Two</span></h1>
-<a href="add.html">Sing Up Now</a>
+Ready Player <span>Two</span></h1>
+<a href="add.html">Sign Up Now</a>
     </div>
 </header>
 
