--- a/hackathon/home.html
+++ b/hackathon/home.html
@@ -20,7 +20,7 @@
 <div class="welcome-text">
         <h1>
 Ready Player <span>Two</span></h1>
-<a href="add.html">Sign Up Now</a>
+<a href="signup.html">Sign Up Now</a>
     </div>
 </header>
 
