--- a/hackathon/home.html
+++ b/hackathon/home.html
@@ -10,7 +10,7 @@
 <header>
     <div class="wrapper">
         <div class="logo">
-            <img src="/images/logo.PNG" alt="">
+            <img src="/images/home.jpeg" alt="">
         </div>
 <ul class="nav-area">
 <li><a href="home.html">Home</a></li>
