--- a/hackathon/match.html
+++ b/hackathon/match.html
@@ -30,9 +30,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbar">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link" id="home" href="../hackathon/home.html">Home</a>
-                    <a class="nav-item nav-link" id="signup" href="../hackathon/match.html">Find a match</a>
-                    <a class="nav-item nav-link" id="signup" href="../hackathon/logout.php">Logout</a>
+                    <a class="nav-item nav-link" id="home" href="home.html">Home</a>
+                    <a class="nav-item nav-link" id="signup" href="match.html">Find a match</a>
+                    <a class="nav-item nav-link" id="signup" href="logout.php">Logout</a>
                 </div>
             </div>
         </nav>
