--- a/hackathon/signup.html
+++ b/hackathon/signup.html
@@ -30,8 +30,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
                     <div class="navbar-nav">
-                        <a class="nav-item nav-link" id="home" href="../hackathon/home.html">Home</a>
-                        <a class="nav-item nav-link" id="signup" href="../hackathon/login_page.php">Login</a>
+                        <a class="nav-item nav-link" id="home" href="home.html">Home</a>
+                        <a class="nav-item nav-link" id="signup" href="login_page.php">Login</a>
                     </div>
                 </div>
             </nav>
